--- a/Peter/index.html
+++ b/Peter/index.html
@@ -3,36 +3,93 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS Day 7 - Libraries</title>
+    <meta name="viewport" content="width=1588pt, initial-scale=1.0">
+    <meta name="author" content="peru3232">
 
-    <!-- Stylesheets -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.15.0/css/all.css">
-    <link rel="stylesheet" href="styles/main.css">
-    
+    <meta name="description" content="Landing page for the FullStackWebDeveloper course of Code Factory">
+
+    <title>CodeReview01-Index</title>
+
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <header>
-    </header>
+    <div class="page">
+        <nav> 
+            <ul>
+                <li><a href="index.html"><img src="images/CFLOGO.png" alt="Logo" height="66"></a></li> 
+                <li class="navEmpty"></li> 
+                <li class="navSearch"><input type="search" name="searchbar" class="flexInput"></li>
+                <li class="navBtn btn"><a href="j4f.html">LogIn</a></li>
+                <li class="navBtn btn"><a href="j4f.html">SignUp</a></li>
+            </ul> 
+        </nav>
 
-    <main>
+        <header>
+            <div class="backgroundPic">
+                <img src="images/keyboard.jpg" alt="background-picture">
+            </div>
+            <div class="overlayContent">
+                <h1>CodeFactory FSWD</h1>
+                <p><strong>This course is specially designed to introduce you to the WebDev world.</strong></p>
+                <img src="images/devices.png" alt="devices-picture">
+            </div>
+        </header>
 
-    </main>
+        <main>
+            <section class="main-topic">
+                <h1>Course Technologies</h1>
+            </section>
+            <section class="main-topic">  
+                <article>
+                    <h2>Front End</h2>
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JS</li>
+                        <li>Angular</li>
+                    </ul>
+                    <div class="btn">
+                        <button type="button" onclick="alert('The answer, my friend...')">Click to see more
+                        </button>
+                    </div>
+                </article>
+                <article>
+                    <h2>Back End</h2>
+                    <ul>
+                        <li>MySQL</li>
+                        <li>PHP</li>
+                        <li>Symfony</li>
+                    </ul>
+                    <div class="btn">
+                        <button type="button" onclick="alert('is blowing in the wind -')">Click to see more
+                        </button>
+                    </div>
+                </article>
+                <article>
+                    <h2>Projects</h2>
+                    <ul>
+                        <li>Front End Project</li>
+                        <li>Full Stack Project</li>
+                    </ul>
+                    <div class="btn">
+                        <button type="button" onclick="alert('The answer is blowing in the wind')">Click to see more
+                        </button>
+                    </div>
+                </article>
+            </section>
+        </main>
 
-    <!-- FOOTER -->
-    <footer class="bg-black text-white text-center py-2 fixed-bottom">
-        <p class="m-0">&copy; 2022 Copyright Peter (<a href="https://github.com/peru3232/">peru3232</a>)</p>
-    </footer>
-    <!-- PAGE END  -->
-
-    <!-- Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.0/anime.min.js"></script>
-
-
-    <script src="data/data.json"></script>
-    <script src="scripts/main.js"></script>
-
+        <footer>
+            <br>
+            <a href="index.html"><img src="images/CFLOGO.png" alt="Logo" height="62"></a>
+            <p>Peter (<a href="https://github.com/peru3232/">peru3232</a>) - CodeFactory &copy;</p>
+            <p><i>All rights reserved</i></p>
+            <ul>    <!-- Extra part for additional links  -->
+                <li><a href="impressum.html">Impressum</a></li>
+                <li><a href="about.html">About</a></li>
+            </ul>
+        </footer>
+    </div>
 </body>
 </html>
