added some animate

--- a/Peter/index.html
+++ b/Peter/index.html
@@ -11,6 +11,10 @@
     <title>CodeReview01-Index</title>
 
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
+
 </head>
 
 <body>
@@ -37,11 +41,11 @@
         </header>
 
         <main>
-            <section class="main-topic">
-                <h1>Course Technologies</h1>
+            <section class="main-topic animate__animated animate__heartBeat animate__slow animate__delay-1s">
+                <h1 class="animate__animated animate__zoomInDown animate__slow">Course Technologies</h1>
             </section>
             <section class="main-topic">  
-                <article>
+                <article class="animate__animated animate__fadeInLeft animate__delay-2s">
                     <h2>Front End</h2>
                     <ul>
                         <li>HTML</li>
@@ -54,7 +58,7 @@
                         </button>
                     </div>
                 </article>
-                <article>
+                <article class="animate__animated animate__backInUp animate__slow animate__delay-3s">
                     <h2>Back End</h2>
                     <ul>
                         <li>MySQL</li>
@@ -66,7 +70,7 @@
                         </button>
                     </div>
                 </article>
-                <article>
+                <article class="animate__animated animate__fadeInRight animate__delay-2s">
                     <h2>Projects</h2>
                     <ul>
                         <li>Front End Project</li>
@@ -80,7 +84,7 @@
             </section>
         </main>
 
-        <footer>
+        <footer class="animate__animated animate__slideInUp animate__delay-5s">
             <br>
             <a href="index.html"><img src="images/CFLOGO.png" alt="Logo" height="62"></a>
             <p>Peter (<a href="https://github.com/peru3232/">peru3232</a>) - CodeFactory &copy;</p>
@@ -91,5 +95,7 @@
             </ul>
         </footer>
     </div>
+
+    <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>    
 </body>
 </html>
