--- a/Peter/index.html
+++ b/Peter/index.html
@@ -29,11 +29,11 @@
             </ul> 
         </nav>
 
-        <header>
+        <header class="animate__animated animate__zoomIn">
             <div class="backgroundPic">
                 <img src="images/keyboard.jpg" alt="background-picture">
             </div>
-            <div class="overlayContent">
+            <div class="overlayContent animate__animated animate__fadeIn animate__delay-2s animate__slower">
                 <h1>CodeFactory FSWD</h1>
                 <p><strong>This course is specially designed to introduce you to the WebDev world.</strong></p>
                 <img src="images/devices.png" alt="devices-picture">
@@ -58,7 +58,7 @@
                         </button>
                     </div>
                 </article>
-                <article class="animate__animated animate__backInUp animate__slow animate__delay-3s">
+                <article class="animate__animated animate__backInUp animate__slow animate__delay-2s">
                     <h2>Back End</h2>
                     <ul>
                         <li>MySQL</li>
@@ -84,7 +84,7 @@
             </section>
         </main>
 
-        <footer class="animate__animated animate__slideInUp animate__delay-5s">
+        <footer class="animate__animated animate__slideInUp animate__delay-4s">
             <br>
             <a href="index.html"><img src="images/CFLOGO.png" alt="Logo" height="62"></a>
             <p>Peter (<a href="https://github.com/peru3232/">peru3232</a>) - CodeFactory &copy;</p>
