--- a/Peter/index.html
+++ b/Peter/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/sweetalert2@10.10.1/dist/sweetalert2.min.css'>
+
 
 
 </head>
@@ -29,11 +31,11 @@
             </ul> 
         </nav>
 
-        <header class="animate__animated animate__zoomIn">
+        <header class="animate__animated animate__zoomIn animate__delay-2s animate__slower">
             <div class="backgroundPic">
                 <img src="images/keyboard.jpg" alt="background-picture">
             </div>
-            <div class="overlayContent animate__animated animate__fadeIn animate__delay-2s animate__slower">
+            <div class="overlayContent animate__animated animate__fadeIn animate__delay-3s animate__slower">
                 <h1>CodeFactory FSWD</h1>
                 <p><strong>This course is specially designed to introduce you to the WebDev world.</strong></p>
                 <img src="images/devices.png" alt="devices-picture">
@@ -41,11 +43,11 @@
         </header>
 
         <main>
-            <section class="main-topic animate__animated animate__heartBeat animate__slow animate__delay-1s">
+            <section class="main-topic animate__animated animate__heartBeat animate__slower animate__delay-1s">
                 <h1 class="animate__animated animate__zoomInDown animate__slow">Course Technologies</h1>
             </section>
             <section class="main-topic">  
-                <article class="animate__animated animate__fadeInLeft animate__delay-2s">
+                <article class="animate__animated animate__fadeInLeft animate__delay-4s">
                     <h2>Front End</h2>
                     <ul>
                         <li>HTML</li>
@@ -54,11 +56,11 @@
                         <li>Angular</li>
                     </ul>
                     <div class="btn">
-                        <button type="button" onclick="alert('The answer, my friend...')">Click to see more
+                        <button type="button" onclick="Btn(1)">Click to see more
                         </button>
                     </div>
                 </article>
-                <article class="animate__animated animate__backInUp animate__slow animate__delay-2s">
+                <article class="animate__animated animate__backInUp animate__slow animate__delay-4s">
                     <h2>Back End</h2>
                     <ul>
                         <li>MySQL</li>
@@ -66,25 +68,25 @@
                         <li>Symfony</li>
                     </ul>
                     <div class="btn">
-                        <button type="button" onclick="alert('is blowing in the wind -')">Click to see more
+                        <button type="button" onclick="Btn(2)">Click to see more
                         </button>
                     </div>
                 </article>
-                <article class="animate__animated animate__fadeInRight animate__delay-2s">
+                <article class="animate__animated animate__fadeInRight animate__delay-4s">
                     <h2>Projects</h2>
                     <ul>
                         <li>Front End Project</li>
                         <li>Full Stack Project</li>
                     </ul>
                     <div class="btn">
-                        <button type="button" onclick="alert('The answer is blowing in the wind')">Click to see more
+                        <button type="button" onclick="Btn(3)">Click to see more
                         </button>
                     </div>
                 </article>
             </section>
         </main>
 
-        <footer class="animate__animated animate__slideInUp animate__delay-4s">
+        <footer class="animate__animated animate__slideInUp animate__delay-5s">
             <br>
             <a href="index.html"><img src="images/CFLOGO.png" alt="Logo" height="62"></a>
             <p>Peter (<a href="https://github.com/peru3232/">peru3232</a>) - CodeFactory &copy;</p>
@@ -95,7 +97,9 @@
             </ul>
         </footer>
     </div>
-
+    <!-- js libraries -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10.10.1/dist/sweetalert2.all.min.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>    
+    <script src="script/main.js"></script>
 </body>
 </html>
